--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
   "dependencies": {
     "d3-dsv": "^3.0.1",
     "nuxt": "^2.0.0",
-    "pixi.js": "^6.1.1"
+    "pixi.js": "^6.2.2"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^6.0.1",
+    "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "babel-eslint": "^10.0.1",
-    "eslint": "^7.32.0",
+    "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-plugin-prettier": "^3.0.1",
-    "node-sass": "^6.0.1",
-    "prettier": "^2.3.2",
+    "eslint-plugin-nuxt": ">=3.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "node-sass": "6",
+    "prettier": "^2.5.1",
     "sass-loader": "10"
   }
 }
